# psd-tools

./: .coveragerc  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yaml  .scrutinizer.yml  .styleci.yml  .travis.yml  AUTHORS.txt  CHANGES.rst  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  UPGRADE IMAGE  pyproject.toml  requirements.txt  run.ini  setup.cfg  setup.py  tox.ini  unittest.sh  update_cython.sh
.claude/skills/investigate-issue/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: auto-tag.yml  ci.yml  deploy.yml  release.yml  stale.yml  test.yml
docs/: Makefile  changelog.rst  conf.py  contributing.rst  development.rst  index.rst  installation.rst  make.bat  migration.rst  overview.rst  psd_tools.decoder.rst  psd_tools.reader.rst  psd_tools.rst  psd_tools.user_api.actions.rst  psd_tools.user_api.effects.rst  psd_tools.user_api.embedded.rst  psd_tools.user_api.json_encoder.rst  psd_tools.user_api.layers.rst  psd_tools.user_api.pil_support.rst  psd_tools.user_api.pymaging_support.rst  psd_tools.user_api.rst  usage.rst
docs/reference/: decoder.actions.rst  decoder.engine_data.rst  decoder.image_resources.rst  decoder.layer_effects.rst  decoder.rst  decoder.tagged_blocks.rst  index.rst  psd-tools.rst  psd_tools.api.adjustments.rst  psd_tools.api.effects.rst  psd_tools.api.layers.rst  psd_tools.api.mask.rst  psd_tools.api.rst  psd_tools.api.shape.rst  psd_tools.api.smart_object.rst  psd_tools.composite.rst  psd_tools.compression.rst  psd_tools.constants.rst  psd_tools.psd.base.rst  psd_tools.psd.color_mode_data.rst  psd_tools.psd.descriptor.rst  psd_tools.psd.effects_layer.rst  psd_tools.psd.engine_data.rst  psd_tools.psd.filter_effects.rst  psd_tools.psd.header.rst  psd_tools.psd.image_data.rst  psd_tools.psd.image_resources.rst  psd_tools.psd.layer_and_mask.rst  psd_tools.psd.linked_layer.rst  psd_tools.psd.patterns.rst  psd_tools.psd.rst  psd_tools.psd.tagged_blocks.rst  psd_tools.psd.vector.rst  psd_tools.rst  psd_tools.terminology.rst  psd_tools2.api.adjustments.rst  psd_tools2.api.effects.rst  psd_tools2.api.layers.rst  psd_tools2.api.mask.rst  psd_tools2.api.shape.rst  (+36 more)
psd_tools/: __init__.py  __main__.py  _compression.pyx  cli.py  compression.py  constants.py  debug.py  encoding.py  exceptions.py  utils.py  validators.py
psd_tools/api/: __init__.py  adjustments.py  composer.py  effects.py  layers.py  mask.py  pil_io.py  psd_image.py  shape.py  smart_object.py
psd_tools/decoder/: __init__.py  actions.py  color.py  decoder.py  image_resources.py  layer_effects.py  layers.py  tagged_blocks.py
psd_tools/icc_profiles/: __init__.py
psd_tools/psd/: __init__.py  adjustments.py  base.py  color.py  color_mode_data.py  descriptor.py  effects_layer.py  engine_data.py  filter_effects.py  header.py  image_data.py  image_resources.py  layer_and_mask.py  linked_layer.py  patterns.py  tagged_blocks.py  vector.py
psd_tools/reader/: __init__.py  color_mode_data.py  header.py  image_resources.py  layers.py  reader.py
psd_tools/user_api/: __init__.py  adjustments.py  composer.py  layers.py  psd_image.py  shape.py
src/psd_tools/: __init__.py  __main__.py  _compression.c  _compression.pyx  cli.py  color_convert.py  compression.py  constants.py  debug.py  encoding.py  icc_profiles.py  registry.py  terminology.py  utils.py  validators.py  version.py
src/psd_tools/api/: __init__.py  adjustments.py  composer.py  effects.py  layers.py  mask.py  numpy_io.py  pil_io.py  protocols.py  psd_image.py  shape.py  smart_object.py  typesetting.py  utils.py
src/psd_tools/composer/: __init__.py  blend.py  effects.py  vector.py
src/psd_tools/composite/: __init__.py  _compat.py  adjustments.py  blend.py  composite.py  effects.py  paint.py  utils.py  vector.py
src/psd_tools/compression/: __init__.py  _packbits.pyx  _rle.pyx  packbits.py  rle.py
src/psd_tools/decoder/: __init__.py  actions.py  color.py  decoder.py  decoders.py  engine_data.py  image_resources.py  layer_effects.py  linked_layer.py  path.py  tagged_blocks.py
src/psd_tools/icc_profiles/: Gray-CIE_L.icc  __init__.py
src/psd_tools/psd/: __init__.py  adjustments.py  base.py  bin_utils.py  color.py  color_mode_data.py  descriptor.py  (+12 more)
src/psd_tools2/: __init__.py  __main__.py  compression.py  constants.py  utils.py  validators.py
tests/: __init__.py  conftest.py  test_adjustments.py  test_advanced_blending.py  test_api.py  test_artboards.py  test_binary.py  test_blend_modes.py  test_composer.py  test_dimensions.py  test_enum.py  test_grouping.py  test_image_resources.py  test_images.py  test_info.py  test_layer_effects.py  test_layer_masks.py  test_metadata.py  test_patterns.py  test_pixels.py  test_placed_layer.py  test_rendering.py  test_tagged_blocks.py  test_text.py  test_utils.py  utils.py
tests/psd_files/: 0layers.psb  0layers.psd  0layers_tblocks.psb  0layers_tblocks.psd  1layer.psb  1layer.psd  1layer2.psd  2layers.psb  2layers.psd  300dpi.psb  300dpi.psd  32bit.psb  32bit.psd  32bit5x5.psb  adjustment-fillers.psd  adjustment-mask.psd  artboard-bgcolor.psd  background-red-opacity-80.psd  blend_modes.psd  blend_modes2.psd  blend_modes3.psd  broken-groups.psb  broken-groups.psd  clip-adjustment.psd  clipping-mask.psb  clipping-mask2.psd  clipping-mask3.psd  clipping-mask4.psd  clipping-mask5.psd  cmyk-alpha-spot.psd  cmyk-spot.psd  effect-stroke-gradient.psd  empty-group.psd  empty-layer.psb  empty-layer.psd  fill_adjustments.psd  gradient-fill.psb  gradient-sizes.psd  gradient-styles.psd  gray0.psb  (+67 more)
tests/psd_tools/: test_adjustments.py  test_advanced_blending.py  test_binary.py  test_color_convert.py  test_composer.py  test_compression.py  test_dimensions.py  test_grouping.py  test_image_resources.py  test_info.py  test_layer_effects.py  test_layer_masks.py  test_main.py  test_pixel_size.py  test_utils.py  utils.py
tests/psd_tools2/: test_compression.py  test_utils.py  utils.py
tests/reader/: test_color_mode_data.py
tools/: configure_abi_tag.sh  extract_terminology.py
(+290 files in other folders)
