[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "psd-tools"
dynamic = ["version"]
authors = [
    { name = "Mikhail Korobov", email = "kmike84@gmail.com" },
    { name = "Kota Yamaguchi", email = "KotaYamaguchi1984@gmail.com" },
]
description = "Python package for working with Adobe Photoshop PSD files"
readme = "README.md"
keywords = ["photoshop", "psd"]
license = "MIT"
dependencies = [
    "typing-extensions;python_version<'3.11'",
    "attrs>=23.0.0",
    "Pillow>=10.3.0",
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

[project.optional-dependencies]
composite = [
    "aggdraw",
    "scipy",
    "scikit-image",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ipykernel",
    "ruff",
    "mypy",
    # Include composite dependencies for testing
    "aggdraw",
    "scipy",
    "scikit-image",
]
docs = ["sphinx", "sphinx_rtd_theme"]

[project.scripts]
psd-tools = "psd_tools.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
psd_tools = ["*.pyx"]

[tool.setuptools.dynamic]
version = { attr = "psd_tools.version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=psd_tools"
markers = [
    "composite: marks tests as requiring composite dependencies (aggdraw, scipy, scikit-image)",
]

[tool.cibuildwheel]
archs = "auto64"
skip = "cp310-win_arm64 cp314t-* cp314-win*"
test-skip = "*-win_arm64"  # SciPy does not provide wheels for these platforms
test-requires = ["pytest", "pytest-cov", "ipython"]
test-command = "pytest {project}/tests"

[[tool.cibuildwheel.overrides]]
select = "cp3{13,14}-{manylinux,musllinux,macos}*"
before-build = "bash tools/configure_abi_tag.sh"

[tool.cibuildwheel.windows]
repair-wheel-command = ["pipx run delvewheel repair -v -w {dest_dir} {wheel}"]

[[tool.cibuildwheel.overrides]]
select = "cp3{13,14}-{manylinux,musllinux,macos}*"
inherit.repair-wheel-command = "append"
repair-wheel-command = "pipx run abi3audit --strict --report {wheel}"
