[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "psd-tools"
dynamic = ["version"]
authors = [
    { name = "Mikhail Korobov", email = "kmike84@gmail.com" },
    { name = "Kota Yamaguchi", email = "KotaYamaguchi1984@gmail.com" },
]
description = "Python package for working with Adobe Photoshop PSD files"
readme = "README.md"
keywords = ["photoshop", "psd"]
license = "MIT"
dependencies = [
    "typing-extensions;python_version<'3.11'",
    "attrs>=23.0.0",
    "Pillow>=10.3.0",
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

[project.optional-dependencies]
composite = [
    "aggdraw>=1.3.16;sys_platform!='win32'",
    "aggdraw>=1.3.16,<1.4.1;sys_platform=='win32' and python_version<'3.11'",
    "aggdraw>=1.4.1;sys_platform=='win32' and python_version>='3.11'",
    "scipy",
    "scikit-image",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pytest",
    "pytest-cov",
    "ipykernel",
    "ruff",
    "mypy",
    "pre-commit",
    # Include composite dependencies for full development
    "aggdraw>=1.3.16;sys_platform!='win32'",
    "aggdraw>=1.3.16,<1.4.1;sys_platform=='win32' and python_version<'3.11'",
    "aggdraw>=1.4.1;sys_platform=='win32' and python_version>='3.11'",
    "scipy",
    "scikit-image",
    "cython>=3.2.4",
    "setuptools>=82.0.0",
]
docs = ["sphinx", "sphinx_rtd_theme"]

[project.scripts]
psd-tools = "psd_tools.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
psd_tools = ["*.pyx", "py.typed"]

[tool.setuptools.dynamic]
version = { attr = "psd_tools.version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=psd_tools"
markers = [
    "composite: marks tests as requiring composite dependencies (aggdraw, scipy, scikit-image)",
]

[tool.cibuildwheel]
archs = "auto64"
skip = "cp310-win_arm64 cp314t-*"
# Skip testing during wheel builds - tests are already run in CI test workflow
# Testing here would require composite dependencies which aren't available on all platforms
test-skip = "*"

[[tool.cibuildwheel.overrides]]
select = "cp3{13,14}-{manylinux,musllinux,macos}*"
before-build = "bash tools/configure_abi_tag.sh"

[tool.cibuildwheel.windows]
repair-wheel-command = ["pipx run delvewheel repair -v -w {dest_dir} {wheel}"]

[[tool.cibuildwheel.overrides]]
select = "cp3{13,14}-{manylinux,musllinux,macos}*"
inherit.repair-wheel-command = "append"
repair-wheel-command = "pipx run abi3audit --strict --report {wheel}"
